--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -9,7 +9,7 @@ $color-orange: #E43D12
 html
   font-size: 10px
   scroll-behavior: smooth
-  
+  scroll-padding-top: 8rem
 
 body
   font-family: "Inter-regular"
